--- a/CLIENT/src/components/Account/SignIn.css
+++ b/CLIENT/src/components/Account/SignIn.css
@@ -207,7 +207,7 @@
     border: none;
     border-radius: 10px;
     font-size: 16px;
-    font-weight: 800px;
+    font-weight: 600;
     cursor: pointer;
     transition: all 0.3s;
 }
